Alteracao da logica para dentro da classe ViaCepCallout para implementar o future method

--- a/force-app/main/default/classes/UpdateAccountAddressSchedulable.cls
+++ b/force-app/main/default/classes/UpdateAccountAddressSchedulable.cls
@@ -5,37 +5,10 @@ public with sharing class UpdateAccountAddressSchedulable implements Schedulable
     public UpdateAccountAddressSchedulable(List<Account> newAccounts) {
         accounts = newAccounts;
     }
-
+    
     public void execute(SchedulableContext ctx) {
 
-        List<Account> accountsToUpdate = new List<Account>();
-        
-        for (Account account : accounts){
-            
-            HttpResponse response = ViaCepCallout.makeGetCallout(account.CEP__c);
-            
-            // If the request is successful, parse the JSON response.
-            if(response.getStatusCode() == 200) {
-                // Deserializes the JSON string into collections of primitive data types.
-                Map<String, Object> result = (Map<String, Object>) JSON.deserializeUntyped(response.getBody());
-                
-                //O campo EnderecoCompletoSemNumero__c deverá ser preenchido concatenando as informações Rua, Bairro, Cidade e Estado, retornadas na API.
-                account.EnderecoCompletoSemNumero__c = (String) result.get('logradouro') + ', ' + 
-                    (String) result.get('bairro') + ' ' +
-                    (String) result.get('localidade') + ' ' +
-                    (String) result.get('uf');
-
-                account.EnderecoEstado__c = (String) result.get('uf');
-                   
-                accountsToUpdate.add(account);
-                
-            }
-        }
-
-        if (!Schema.sObjectType.Account.fields.EnderecoCompletoSemNumero__c.isUpdateable()) {
-            return ;
-        }
-
-        update accounts;
+        ViaCepCallout.makeGetCallout(JSON.serialize(accounts));
+       
     }
 }
