--- a/force-app/main/default/classes/UpdateAccountAddressQueueable.cls
+++ b/force-app/main/default/classes/UpdateAccountAddressQueueable.cls
@@ -1,4 +1,4 @@
-public with sharing class UpdateAccountAddressQueueable implements Queueable, Database.AllowsCallouts {
+public with sharing class UpdateAccountAddressQueueable implements Queueable{
     
     private List<Account> accounts;
     
@@ -7,36 +7,6 @@ public with sharing class UpdateAccountAddressQueueable implements Queueable, Da
     }
     
     public void execute(QueueableContext context) {
-        
-        List<Account> accountsToUpdate = new List<Account>();
-        
-        for (Account account : accounts){
-            
-            HttpResponse response = ViaCepCallout.makeGetCallout(account.CEP__c);
-            
-            // If the request is successful, parse the JSON response.
-            if(response.getStatusCode() == 200) {
-                // Deserializes the JSON string into collections of primitive data types.
-                Map<String, Object> result = (Map<String, Object>) JSON.deserializeUntyped(response.getBody());
-                
-                //O campo EnderecoCompletoSemNumero__c deverá ser preenchido concatenando as informações Rua, Bairro, Cidade e Estado, retornadas na API.
-                account.EnderecoCompletoSemNumero__c = (String) result.get('logradouro') + ', ' + 
-                    (String) result.get('bairro') + ' ' +
-                    (String) result.get('localidade') + ' ' +
-                    (String) result.get('uf');
-
-                account.EnderecoEstado__c = (String) result.get('uf');
-                   
-                accountsToUpdate.add(account);
-                
-            }
-        }
-
-        if (!Schema.sObjectType.Account.fields.EnderecoCompletoSemNumero__c.isUpdateable()) {
-            return ;
-        }
-
-        update accountsToUpdate;
+        ViaCepCallout.makeGetCallout(JSON.serialize(accounts));
     }
-    
 }
