Corrigido quando nao estava habilitado para scheduled estava entrando no else

--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -157,7 +157,8 @@ public without sharing class AccountTriggerHandler {
         if(updateVia == 'BuscaCepViaTrigger__c'){
             updateAddressQueueAble(accountsToUpdate);
         }
-        else{
+        
+        if(updateVia == 'BuscaCepViaScheduledApex__c'){       
             updateAdressSchedulable(accountsToUpdate);
         }
 
