Alterado cep do mock

--- a/force-app/main/default/classes/ViaCepHttpCalloutMock.cls
+++ b/force-app/main/default/classes/ViaCepHttpCalloutMock.cls
@@ -1,15 +1,12 @@
 @isTest
-global class ViaCepHttpCalloutMock implements HttpCalloutMock{
+public class ViaCepHttpCalloutMock implements HttpCalloutMock{
    
-    global HTTPResponse respond(HTTPRequest request) {
+    public HTTPResponse respond(HTTPRequest request) {
         // Create a fake response
         HttpResponse response = new HttpResponse();
         response.setHeader('Content-Type', 'application/json');
-        response.setBody('{"cep": "13801-035","logradouro": "Rua Paschoal Stabile","complemento": "","bairro": "Jardim Brasília","localidade": "Mogi Mirim","uf": "SP","ibge": "3530805","gia": "4560","ddd": "19","siafi": "6717"}');
+        response.setBody('{"cep": "13801035","logradouro": "Rua Paschoal Stabile","complemento": "","bairro": "Jardim Brasília","localidade": "Mogi Mirim","uf": "SP","ibge": "3530805","gia": "4560","ddd": "19","siafi": "6717"}');
         response.setStatusCode(200);
         return response; 
     }
-
-
-
 }
