Corrigido comparacao do mock com a classe de teste

--- a/force-app/main/default/classes/ViaCepCalloutTest.cls
+++ b/force-app/main/default/classes/ViaCepCalloutTest.cls
@@ -10,7 +10,7 @@ private class ViaCepCalloutTest {
         String contentType = response.getHeader('Content-Type');
         System.assertEquals('application/json',contentType,'Content-Type in response is Wrong');
 
-        String expectedValue = '{"cep": "13801-035","logradouro": "Rua Paschoal Stabile","complemento": "","bairro": "Jardim Brasília","localidade": "Mogi Mirim","uf": "SP","ibge": "3530805","gia": "4560","ddd": "19","siafi": "6717"}';
+        String expectedValue = '{"cep": "13801035","logradouro": "Rua Paschoal Stabile","complemento": "","bairro": "Jardim Brasília","localidade": "Mogi Mirim","uf": "SP","ibge": "3530805","gia": "4560","ddd": "19","siafi": "6717"}';
 
         System.assertEquals(expectedValue,  response.getBody(), 'Response body is Wrong');
 
