Alterações no painel para exibir contas no mapa

--- a/force-app/main/default/classes/VendedoresPanelController.cls
+++ b/force-app/main/default/classes/VendedoresPanelController.cls
@@ -1,8 +1,16 @@
 public with sharing class VendedoresPanelController {
     @AuraEnabled(cacheable=true)
-    public static List<Vendedor__c> getAccountsByVendedor(){
+    public static List<Vendedor__c> getAllAccountsByVendedor(){
         try {
-            return [SELECT Id, Name, RecordType.DeveloperName, (SELECT Id,Name FROM Accounts__r) FROM Vendedor__c WITH SECURITY_ENFORCED];
+            return [SELECT Id, Name, RecordType.DeveloperName, (SELECT Id
+                                                                       ,Name
+                                                                       ,AnnualRevenue
+                                                                       ,EnderecoCompletoSemNumero__c
+                                                                       ,EnderecoEstado__c
+                                                                       ,EnderecoRua__c
+                                                                       ,EnderecoCidade__c
+                                                                       ,EnderecoPais__c
+                                                                FROM Accounts__r) FROM Vendedor__c WITH SECURITY_ENFORCED];
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
